[package]
name = "the-fourth-server"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/KGAFT/the-fourth-server"
categories = ["asynchronous", "network-programming", "web-programming"]
keywords = ["tcp", "bincode", "tokio", "asynchronous", "binary"]
readme = "README.md"
description = "A lightweight tcp server/client pair for network programming"
documentation = "https://docs.rs/the-fourth-server"

[lib]
name = "tfserver"
path = "src/lib.rs"
crate-type = ["rlib"]


[dependencies]
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
num_enum = "0.7"
rand = "0.9"
bincode = { version = "2", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tokio-util = {version = "0.7", features = ["codec"]}
futures-util = { version = "0.3", features = ["sink", "io", "tokio-io", "futures-io", "io-compat"] }
async-trait = { version = "0.1" }
bytes = "1.11"
tokio-tungstenite = "0.29"
ws_stream_wasm = "0.7"
pin-project = "1"
futures-io = "0.3.32"
async-tungstenite = "0.34"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio-rustls = "0.26"

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio-rustls = { version = "0.26", default-features = false }
rustls = { version = "0.23", default-features = false, features = ["ring"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
